apps/monitoring/blackbox_exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "blackbox-exporter"
spec:
  selector:
    app: "blackbox-exporter"
  ports:
    - port: 80
      targetPort: "blackbox"
