apps/monitoring/blackbox_exporter/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blackbox-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blackbox-exporter
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: blackbox
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "prometheus"
